java FX functional.

--- a/src/main/resources/headMessages_en.properties
+++ b/src/main/resources/headMessages_en.properties
@@ -18,3 +18,8 @@ bot=Bot
 anotherPlayer=Another player
 writeName=Write name
 score=Score
+nameColumn=Name
+winsColumn=Wins
+loseColumn=Loses
+drawColumn=Draws
+scoreColumn=Score
